--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div id="embed-screen">
     <object data="https://sd592g.github.io/zj684od4lfg/">
-        <p>Your browser does not support this embedding. Please visit <a href="https://sd592g.github.io/zj684od4lfg/" target="_blank">this link</a> instead.</p>
+        <p>Your browser does not support this embedding. Please visit <a href="https://skibiditoilet.com" target="_blank">this link</a> instead.</p>
     </object>
 </div>
 
