--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 </div>
 
 <div id="embed-screen">
-    <object data="https://sd592g.github.io/zj684od4lfg/">
+    <object data="https://vexinity99.github.io/mathfun99/">
         <p>Your browser does not support this embedding. Please visit <a href="https://skibiditoilet.com" target="_blank">this link</a> instead.</p>
     </object>
 </div>
 
 <script>
-    const correctPassword = "iGYATT99";
+    const correctPassword = "skibfan99";
     const passwordInput = document.getElementById('password-input');
     const submitPasswordButton = document.getElementById('submit-password');
     const passwordContainer = document.getElementById('password-container');
