--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div>
 
 <script>
-    const correctPassword = "skibfan99";
+    fetch('https://raw.githubusercontent.com/vexinity99/csshelpassets/refs/heads/main/password').then(response => response.text()).then(text => { const correctPassword = text.trim(); });
     const passwordInput = document.getElementById('password-input');
     const submitPasswordButton = document.getElementById('submit-password');
     const passwordContainer = document.getElementById('password-container');
