--- a/index.html
+++ b/index.html
@@ -75,20 +75,18 @@
 </div>
 
 <script>
-    let correctPassword = ''; // Declare a global variable to store the correct password
+    let correctPassword = '';
 
-    // Fetch the password from the GitHub raw file
     fetch('https://raw.githubusercontent.com/vexinity99/csshelpassets/refs/heads/main/password.txt')
         .then(response => response.text())
         .then(text => {
-            correctPassword = text.trim(); // Set the correctPassword once fetched
+            correctPassword = text.trim();
         });
 
-    // Fetch the title from the GitHub raw file
     fetch('https://raw.githubusercontent.com/vexinity99/csshelpassets/refs/heads/main/title.txt')
         .then(response => response.text())
         .then(titleText => {
-            document.getElementById('title').innerText = titleText.trim(); // Set the title
+            document.getElementById('title').innerText = titleText.trim();
         });
 
     const passwordInput = document.getElementById('password-input');
@@ -96,7 +94,6 @@
     const passwordContainer = document.getElementById('password-container');
     const embedScreen = document.getElementById('embed-screen');
 
-    // Add event listener to check the password when the button is clicked
     submitPasswordButton.addEventListener('click', () => {
         if (passwordInput.value === correctPassword) {
             passwordContainer.style.display = 'none';
